# Chat-system-cpp-chat-server-

./: .gitignore  CMakeLists.txt  Dockerfile  INTERVIEW.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: cli_client.cpp
config/: server.conf.example
docs/: api.md  architecture.md  deployment.md
include/auth/: crypto.h  session.h
include/chat/: chat_server.h  message_router.h  presence.h  room_manager.h
include/common/: config.h  logger.h  platform.h  thread_pool.h  util.h
include/db/: mysql_pool.h  repositories.h
include/handlers/: handlers.h
include/net/: connection.h  reactor.h  server.h  socket.h
include/protocol/: framing.h  messages.h
scripts/: init_db.sql  stress_test.py
src/: main.cpp
src/auth/: crypto.cpp  session.cpp
src/chat/: chat_server.cpp  message_router.cpp  presence.cpp  room_manager.cpp
src/common/: config.cpp  logger.cpp  thread_pool.cpp  util.cpp
src/db/: mysql_pool.cpp  repositories.cpp
src/handlers/: handlers.cpp
src/net/: connection.cpp  reactor_epoll.cpp  reactor_select.cpp  server.cpp  socket.cpp
src/protocol/: framing.cpp  messages.cpp
tests/: test_framing.cpp  test_main.cpp  test_router.cpp  test_runner.h  test_thread_pool.cpp
